# latexformat

./: LICENSE  README.md  pyproject.toml
src/latexformat/: cli.py  formatting.py  utils.py
